syntax = "proto3";

option go_package = "gen-proto/rating_pb;rating_pb";

service RatingService {
    rpc GetRatingsByHotelId(GetRatingsByHotelIdRequest) returns (GetRatingsByHotelIdRepsonse);
    rpc CreateRating(CreateRatingRequest) returns (CreateRatingResponse);
    rpc UpdateRatingById(UpdateRatingByIdRequest) returns (UpdateRatingByIdResponse);
    rpc DeleteRatingById(DeleteRatingByIdRequest) returns (DeleteRatingByIdResponse);
}

message Rating {
    string id = 1;
    int32 score = 2;
    string hotelId = 3;
    string userId = 4;
    string comment = 5;
}

message GetRatingsByHotelIdRequest {
    string hotelId = 1;
}

message GetRatingsByHotelIdRepsonse {
    repeated Rating ratings = 1;
}

message CreateRatingRequest {
    int32 score = 1;
    string hotelId = 2;
    string userId = 3;
    string comment = 4;
}
message CreateRatingResponse {
    
}

message UpdateRatingByIdRequest {
    Rating newRating = 1;
}

message UpdateRatingByIdResponse {

}

message DeleteRatingByIdRequest {
    string id = 1;
}

message DeleteRatingByIdResponse {

}